# CoreteXEngine

./: .gitignore  .gitmodules  Block.h  BlockTypes.h  CMakeLists.txt  Camera.cpp  Camera.h  CoretexNgin.sln  CoretexNgin.vcxproj  EBO.cpp  EBO.h  GenerateSolutionFiles.bat  Indices.cpp  Indices.h  LICENSE.txt  LearnOpenGL.sln  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  PerlinNoise.cpp  PerlinNoise.h  Physics.h  README.md  Renderer.cpp  Renderer.h  RunDebug.bat  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Vertices.cpp  Vertices.h  Vertices.inl  WaterStuff.h  default.frag  default.vert  glad.c  (+4 more)
.github/workflows/: cmake.yml
Libraries/include/glad/: glad.h
src/: Block.cpp  Indices.cpp  Indices.inl  PerlinNoise.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Texture.h  TextureArray.cpp  VAO.h  VBO.cpp  VBO.h  WorldManager.h  default.frag  default.vert  main.cpp
src/Core/: Application.h  Core.h  Engine.cpp  Engine.h
src/Core/Buffers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Core/Data/: CoreDataMinimal.h  CoreMinimal.h  String.cpp  String.h  Types.h
src/Core/Data/Common/: Array.cpp  Array.h
src/Core/Data/DataStructures/: HashMap.cpp  HashMap.h  LinkedList.cpp  LinkedList.h
src/Core/Data/Enumerations/: AppResultEnum.h
src/Core/Data/Structs/: RenderData.h  Transform.h
src/Core/ECS/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  EventManager.h  System.h  SystemManager.h  Types.h
src/Core/GameObjects/: ObjectBase.cpp  ObjectBase.h  PlayableCharacterBase.cpp  PlayableCharacterBase.h
src/Core/Graphics/Camera/: Camera.cpp  Camera.h
src/Core/Graphics/Render/: Renderer.cpp  Renderer.h
src/Core/Graphics/Render/Helpers/: Indices.cpp  Vertices.cpp  Vertices.h
src/Core/Graphics/Render/RenderPasses/: DrawCubesRenderPass.cpp  DrawCubesRenderPass.h
src/Core/Graphics/Shader/: Shader.cpp  Shader.h
src/Core/Graphics/Texture/: Texture.h  TextureArray.cpp  TextureArray.h  TextureBase.cpp  TextureBase.h  TextureSingle.cpp  TextureSingle.h
src/Core/Input/: InputManager.h
src/Core/Interfaces/: IApplication.h
src/Core/Systems/: CameraControlSystem.cpp  CameraControlSystem.h
src/Core/Utils/: Imgui.cpp  Imgui.h  PerlinNoise.cpp  PerlinNoise.h
src/Core/Utils/Debug/Assertions/: Assertions.cpp  Assertions.h
src/Core/Utils/Debug/Logger/: Logger.h
src/Core/Window/: Window.cpp  Window.h
src/Game/Block/: Block.cpp  Block.h  BlockTypes.h
src/Game/World/: WorldManager.cpp  WorldManager.h
temp/lib/: glfw3.lib
x64/Debug/: LearnOpenGL.exe.recipe  LearnOpenGL.ilk  LearnOpenGL.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/LearnOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LearnOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
